CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(optparse)

SET(LIB_DIR_PREFIX /usr/local)

AUX_SOURCE_DIRECTORY(. LIB_SRC)
ADD_LIBRARY(optparse STATIC ${LIB_SRC})

#INCLUDE_DIRECTORIES(${LIB_DIR_PREFIX}/include)

INSTALL(TARGETS optparse ARCHIVE DESTINATION lib)
INSTALL(FILES optparse.h DESTINATION include)

#SET(CMAKE_INSTALL_PREFIX ..)
SET(CMAKE_INSTALL_PREFIX ${LIB_DIR_PREFIX})